--- a/kobuki_node/config/kobuki_node_params.yaml
+++ b/kobuki_node/config/kobuki_node_params.yaml
@@ -9,6 +9,6 @@ kobuki_ros_node:
     odom_frame: odom
     base_frame: base_footprint
     publish_tf: true
-    use_imu_heading: true
+    use_imu_heading: false # デフォルト: true
     wheel_left_joint_name: wheel_left_joint
     wheel_right_joint_name: wheel_right_joint
